--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ torch>=1.6
 numpy
 spacy>=2.0          # also requires model download `python -m spacy download en_core_web_sm`
 tqdm
-transformers>=3.0   # Note that original models trained with v3.4.0
+transformers>=3.0   # transformers>=4.16.0 required for training parse_xfm models.
 smatch
 
 # Model specific
