--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,6 +4,12 @@
 # Required
 version: 2
 
+# Set the version of Python and other tools you might need
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.10"
+
 # Build documentation with MkDocs
 mkdocs:
     configuration: mkdocs.yml
